k8s/events-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events
spec:
  selector:
    app: events
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
