k8s/notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications
spec:
  selector:
    app: notifications
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
